--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-version=1.3-1
-mc_version=1.15.2
-forge_version=31.2.19
-mcp_mappings=20200613-1.15.1
+version=1.0
+mc_version=1.16.1
+forge_version=32.0.17
+mcp_mappings=20200514-1.16
