--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,5 +1,5 @@
 modLoader="javafml"
-loaderVersion="[31,)"
+loaderVersion="[32,)"
 issueTrackerURL="http://my.issue.tracker/"
 
 [[mods]]
@@ -21,6 +21,6 @@ issueTrackerURL="http://my.issue.tracker/"
 [[dependencies.tmcb_lib]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.16.1,"
+    versionRange="[1.16.1,)"
     ordering="NONE"
     side="BOTH"
