--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-version=1.6
-mc_version=1.16.2
-forge_version=33.0.22
-mcp_mappings=20200723-1.16.1
+mod_version=2.0
+mc_version=1.18.2
+forge_version=40.2.0
+mappings_version=2022.11.06-1.18.2
