--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,27 +1,29 @@
-modLoader="javafml"
-loaderVersion="[33,)"
-issueTrackerURL="http://my.issue.tracker/"
-license="MIT"
+modLoader = "javafml"
+loaderVersion = "[40,)"
+issueTrackerURL = "https://github.com/TheMCBrothers/TheMCBrosLib/issues"
+license = "MIT License"
 
 [[mods]]
-    modId="tmcb_lib"
-    version="${file.jarVersion}"
-    displayName="TheMCBrosLib"
-    logoFile="logo.png"
-    credits="Some stuff inspired by Mekanism"
-    authors="TheMCBrothers"
-    description='''
+    modId = "tmcb_lib"
+    version = "${file.jarVersion}"
+    displayName = "TheMCBrosLib"
+    updateJSONURL = "https://forge.curseupdate.com/387586/tmcb_lib"
+    displayURL = "https://themcbrothers.net/"
+    logoFile = "logo.png"
+    credits = "Some stuff inspired by JEI, Mekanism, Mantle"
+    authors = "TheMCBrothers"
+    description = '''
     Library Mod for mods by TheMCBrothers.
     '''
 [[dependencies.tmcb_lib]] #optional
-    modId="forge"
-    mandatory=true
-    versionRange="[33,)"
-    ordering="NONE"
-    side="BOTH"
+    modId = "forge"
+    mandatory = true
+    versionRange = "[40,)"
+    ordering = "NONE"
+    side = "BOTH"
 [[dependencies.tmcb_lib]]
-    modId="minecraft"
-    mandatory=true
-    versionRange="[1.16.2,)"
-    ordering="NONE"
-    side="BOTH"
+    modId = "minecraft"
+    mandatory = true
+    versionRange = "[1.18,1.19)"
+    ordering = "NONE"
+    side = "BOTH"
