--- a/gradle.properties
+++ b/gradle.properties
@@ -7,3 +7,5 @@ mod_version=2.0
 mc_version=1.18.2
 forge_version=40.2.0
 mappings_version=2022.11.06-1.18.2
+project_id=387586
+artifact_type=release
