--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,13 @@ archivesBaseName = "TheMCBrosLib"
 group = "net.themcbrothers"
 version = "$project.mc_version-$project.mod_version"
 
-// Mojang ships Java 17 to end users in 1.18+, so your mod should target Java 17.
-java.toolchain.languageVersion = JavaLanguageVersion.of(17)
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(17))
+    }
+
+    withSourcesJar()
+}
 
 minecraft {
     mappings channel: 'parchment', version: project.mappings_version
@@ -87,6 +92,17 @@ jar {
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
+}
+
+sourcesJar {
+    duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
+    archiveClassifier.set('sources')
+    from sourceSets.main.allJava;
+}
+
+artifacts {
+    archives tasks.jar
+    archives tasks.sourcesJar
 }
 
 // Example configuration to allow publishing using the maven-publish task
