--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ java {
 }
 
 minecraft {
-    mappings channel: 'parchment', version: project.mappings_version
+    mappings channel: project.mappings_channel, version: project.mappings_version
 
     accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 
@@ -112,6 +112,11 @@ jar.finalizedBy('reobfJar')
 //publish.dependsOn('reobfJar')
 
 private String getSecret(String key) {
+    def secret = System.getenv(key)
+    if (secret != null) {
+        return secret.trim()
+    }
+
     File secretFile = file('secrets.properties')
     if (secretFile.canRead()) {
         Properties secretProps = new Properties()
