--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,10 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-mod_version=2.0.2
-mc_version=1.19.3
-forge_version=44.1.5
-mappings_version=2022.12.18-1.19.3
+mod_version=3.0.0-SNAPSHOT
+mc_version=1.19.4
+forge_version=45.0.64
+mappings_channel=official
+mappings_version=1.19.4
 project_id=387586
 artifact_type=release
