--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,10 @@ org.gradle.daemon=false
 
 mod_version=3.0.0
 mc_version=1.19.4
+minecraft_range=[1.19.4]
 forge_version=45.0.64
+forge_range=[45,)
+loader_version=[45,)
 mappings_channel=official
 mappings_version=1.19.4
 project_id=387586
