--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,5 +1,5 @@
 modLoader = "javafml"
-loaderVersion = "[44,)"
+loaderVersion = "${loader_version}"
 issueTrackerURL = "https://github.com/TheMCBrothers/TheMCBrosLib/issues"
 license = "MIT License"
 
@@ -18,12 +18,12 @@ license = "MIT License"
 [[dependencies.tmcb_lib]] #optional
     modId = "forge"
     mandatory = true
-    versionRange = "[44,)"
+    versionRange = "${forge_range}"
     ordering = "NONE"
     side = "BOTH"
 [[dependencies.tmcb_lib]]
     modId = "minecraft"
     mandatory = true
-    versionRange = "[1.19.3,1.20)"
+    versionRange = "${minecraft_range}"
     ordering = "NONE"
     side = "BOTH"
