--- a/gradle.properties
+++ b/gradle.properties
@@ -11,5 +11,6 @@ forge_range=[45,)
 loader_version=[45,)
 mappings_channel=official
 mappings_version=1.19.4
-project_id=387586
 artifact_type=release
+curse_project=387586
+modrinth_project=themcbroslib
