--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,6 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       cf_key: ${{ secrets.CURSEFORGE_TOKEN }}
+      modrinth_token: ${{ secrets.MODRINTH_TOKEN }}
       nexus_uname: ${{ secrets.PUBLISH_USER }}
       nexus_pwd: ${{ secrets.PUBLISH_PASSWORD }}
 
@@ -26,5 +27,11 @@ jobs:
         distribution: 'microsoft'
     - name: Set up Gradle
       uses: gradle/gradle-build-action@v2
-    - name: Build and publish with Gradle
-      run: chmod +x ./gradlew && ./gradlew curseforge
+    - name: Build with Gradle
+      run: chmod +x ./gradlew && ./gradlew build
+    - name: Publish to Nexus
+      run: ./gradlew publish
+    - name: Publish to Modrinth
+      run: ./gradlew modrinth
+    - name: Publish to CurseForge
+      run: ./gradlew curseforge
