update to Minecraft 1.20

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,14 +3,14 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-mod_version=3.1.0
-mc_version=1.19.4
-minecraft_range=[1.19.4]
-forge_version=45.0.64
-forge_range=[45,)
-loader_version=[45,)
+mod_version=4.0.0-SNAPSHOT
+mc_version=1.20
+minecraft_range=[1.20, 1.21)
+forge_version=46.0.1
+forge_range=[46,)
+loader_version=[46,)
 mappings_channel=official
-mappings_version=1.19.4
+mappings_version=1.20
 artifact_type=release
 curse_project=387586
 modrinth_project=themcbroslib
