--- a/gradle.properties
+++ b/gradle.properties
@@ -4,11 +4,11 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 mod_version=4.0.0-SNAPSHOT
-mc_version=1.20
-minecraft_range=[1.20, 1.21)
+minecraft_version=1.20
+minecraft_version_range=[1.20, 1.21)
 forge_version=46.0.1
-forge_range=[46,)
-loader_version=[46,)
+forge_version_range=[46,)
+loader_version_range=[46,)
 mappings_channel=official
 mappings_version=1.20
 artifact_type=release
