--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-mod_version=4.0.0-SNAPSHOT
+mod_version=4.0.0
 minecraft_version=1.20
 minecraft_version_range=[1.20, 1.21)
 forge_version=46.0.1
