--- a/gradle.properties
+++ b/gradle.properties
@@ -4,13 +4,14 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 mod_version=4.1.0
-minecraft_version=1.20
+minecraft_version=1.20.1
 minecraft_version_range=[1.20, 1.21)
-forge_version=46.0.14
+forge_version=47.0.1
 forge_version_range=[46,)
 loader_version_range=[46,)
 mappings_channel=official
-mappings_version=1.20
+mappings_version=1.20.1
 artifact_type=release
 curse_project=387586
 modrinth_project=themcbroslib
+supported_minecraft_versions=1.20,1.20.1
