fix gradle for workflows

--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'net.minecraftforge.gradle' version '5.1.+'
     id 'org.parchmentmc.librarian.forgegradle' version '1.+'
     id 'com.matthewprenger.cursegradle' version '1.4.0'
+    id "com.modrinth.minotaur" version '2.+'
 }
 
 archivesBaseName = "TheMCBrosLib"
@@ -112,6 +113,11 @@ jar.finalizedBy('reobfJar')
 //publish.dependsOn('reobfJar')
 
 private String getSecret(String key) {
+    def secret = System.getenv(key)
+    if (secret != null) {
+        return secret.trim()
+    }
+
     File secretFile = file('secrets.properties')
     if (secretFile.canRead()) {
         Properties secretProps = new Properties()
@@ -147,16 +153,30 @@ publishing {
     }
 }
 
-// publishing on CurseForge
-curseforge {
-    apiKey = getSecret('cf_key')
+var curseForgeKey = getSecret('cf_key')
+var modrinthToken = getSecret('modrinth_token')
 
-    project {
-        id = project.project_id
-        releaseType = project.artifact_type
-        addGameVersion(project.mc_version)
-        mainArtifact(tasks.jar)
+// Publish to CurseForge
+if (curseForgeKey != null) {
+    curseforge {
+        apiKey = curseForgeKey
+
+        project {
+            id = curse_project
+            releaseType = artifact_type
+            addGameVersion(mc_version)
+            mainArtifact(tasks.jar)
+        }
     }
 }
 
-tasks.named("curseforge") { finalizedBy("publish") }
+// Publish to Modrinth
+if (modrinthToken != null) {
+    modrinth {
+        token = modrinthToken
+        projectId = modrinth_project
+        versionType = artifact_type
+        uploadFile = tasks.jar
+        additionalFiles.add(tasks.sourcesJar)
+    }
+}
