--- a/gradle.properties
+++ b/gradle.properties
@@ -7,5 +7,6 @@ mod_version=2.0.3
 mc_version=1.19.3
 forge_version=44.1.5
 mappings_version=2022.12.18-1.19.3
-project_id=387586
+curse_project=387586
+modrinth_project=themcbroslib
 artifact_type=release
