--- a/gradle.properties
+++ b/gradle.properties
@@ -7,5 +7,6 @@ mod_version=2.0.5
 mc_version=1.18.2
 forge_version=40.2.0
 mappings_version=2022.11.06-1.18.2
-project_id=387586
+curse_project=387586
+modrinth_project=themcbroslib
 artifact_type=release
