--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,27 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
+mod_id=tmcb_lib
+mod_name=TheMCBrosLib
+mod_license=MIT License
 mod_version=4.2.0
-minecraft_version=1.20.1
-minecraft_version_range=[1.20, 1.21)
-forge_version=47.0.1
-forge_version_range=[46,)
-loader_version_range=[46,)
+mod_group_id=net.themcbrothers
+mod_base_name=TheMCBrosLib
+mod_credits=Some stuff inspired by JEI, Mekanism, Mantle
+mod_authors=TheMCBrothers
+mod_description=Library Mod for mods by TheMCBrothers.
+
+minecraft_version=1.20.2
+minecraft_version_range=[1.20.2, 1.21)
+
+neo_version=20.2.20-beta
+neo_version_range=[20.2,)
+loader_version_range=[1,)
+
 mappings_channel=official
-mappings_version=1.20.1
+mappings_version=1.20.2
+
+github_repo=TheMCBrothers/TheMCBrosLib
 artifact_type=release
 curse_project=387586
 modrinth_project=themcbroslib
-supported_minecraft_versions=1.20,1.20.1
