--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,27 +1,27 @@
 modLoader = "javafml"
 loaderVersion = "${loader_version_range}"
-issueTrackerURL = "https://github.com/TheMCBrothers/TheMCBrosLib/issues"
-license = "MIT License"
+issueTrackerURL = "https://github.com/${github_repo}/issues"
+license = "${mod_license}"
 
 [[mods]]
-    modId = "tmcb_lib"
-    version = "${file.jarVersion}"
-    displayName = "TheMCBrosLib"
-    updateJSONURL = "https://forge.curseupdate.com/387586/tmcb_lib"
-    displayURL = "https://themcbrothers.net/"
-    logoFile = "logo.png"
-    credits = "Some stuff inspired by JEI, Mekanism, Mantle"
-    authors = "TheMCBrothers"
-    description = '''
-    Library Mod for mods by TheMCBrothers.
-    '''
-[[dependencies.tmcb_lib]] #optional
-    modId = "forge"
+modId = "${mod_id}"
+version = "${mod_version}"
+displayName = "${mod_name}"
+updateJSONURL = "https://forge.curseupdate.com/${curse_project}/${mod_id}"
+displayURL = "https://themcbrothers.net/mods"
+logoFile = "logo.png"
+credits = "${mod_credits}"
+authors = "${mod_authors}"
+description = '''${mod_description}'''
+
+[[dependencies.${mod_id}]]
+    modId = "neoforge"
     mandatory = true
-    versionRange = "${forge_version_range}"
+    versionRange = "${neo_version_range}"
     ordering = "NONE"
     side = "BOTH"
-[[dependencies.tmcb_lib]]
+
+[[dependencies.${mod_id}]]
     modId = "minecraft"
     mandatory = true
     versionRange = "${minecraft_version_range}"
