--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,10 @@ build
 # other
 eclipse
 run
-
-# Files from Forge MDK
-forge*changelog.txt
+runs
+run-data
+repo
 
 secrets.properties
+secret.properties
+.env
