--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'idea'
     id 'maven-publish'
     id 'net.neoforged.gradle.userdev' version '7.+'
-    id 'me.modmuss50.mod-publish-plugin' version '0.4.+'
+    id 'me.shedaniel.unified-publishing' version '0.1.+'
 }
 
 version = "$minecraft_version-$mod_version"
@@ -127,32 +127,31 @@ publishing {
     }
 }
 
-var curseForgeKey = providers.environmentVariable('cf_key')
-var modrinthToken = providers.environmentVariable('modrinth_token')
+unifiedPublishing {
+    project {
+        displayName = "[$minecraft_version] v$mod_version"
+        releaseType = project.artifact_type
+        gameVersions = [minecraft_version]
+        gameLoaders = ["neoforge"]
 
-publishMods {
-    file = tasks.jar.archiveFile
-    type = artifact_type == 'release' ? STABLE : artifact_type == 'beta' ? BETA : ALPHA
+        mainPublication tasks.jar
 
-    modLoaders.add("neoforge")
+        var curseforgeToken = System.getenv("CURSEFORGE_TOKEN")
+        var modrinthToken = System.getenv("MODRINTH_TOKEN")
 
-    // Publish to CurseForge
-    if (curseForgeKey.isPresent()) {
-        curseforge {
-            accessToken = curseForgeKey
-            projectId = curse_project
-            minecraftVersions.add(minecraft_version)
+        if (curseforgeToken != null) {
+            curseforge {
+                token = curseforgeToken
+                id = project.curse_project
+                gameVersions.addAll "Java 17"
+            }
         }
-    }
 
-    // Publish to Modrinth
-    if (modrinthToken.isPresent()) {
-        modrinth {
-            accessToken = modrinthToken
-            projectId = modrinth_project
-            displayName = version
-            minecraftVersions.add(minecraft_version)
-            additionalFiles.from(tasks.sourcesJar.archiveFile)
+        if (modrinthToken != null) {
+            modrinth {
+                token = modrinthToken
+                id = project.modrinth_project
+            }
         }
     }
 }
