--- a/settings.gradle
+++ b/settings.gradle
@@ -2,7 +2,7 @@ pluginManagement {
     repositories {
         gradlePluginPortal()
         maven { url = 'https://maven.neoforged.net/releases' }
-        maven { url = 'https://maven.parchmentmc.org' }
+        maven { url = 'https://maven.architectury.dev' }
     }
 }
 
