--- a/build.gradle
+++ b/build.gradle
@@ -62,12 +62,12 @@ tasks.named('jar', Jar).configure {
     exclude 'net/themcbrothers/lib/datagen/**'
     manifest {
         attributes([
-                "Specification-Title"     : "tmcb_lib",
-                "Specification-Vendor"    : "TheMCBrothers",
+                "Specification-Title"     : mod_id,
+                "Specification-Vendor"    : mod_authors,
                 "Specification-Version"   : "1", // We are version 1 of ourselves
                 "Implementation-Title"    : project.name,
                 "Implementation-Version"  : jar.archiveVersion,
-                "Implementation-Vendor"   : "TheMCBrothers",
+                "Implementation-Vendor"   : mod_authors,
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
@@ -105,10 +105,7 @@ tasks.withType(ProcessResources).configureEach {
 publishing {
     publications { PublicationContainer publicationContainer ->
         publicationContainer.register("maven", MavenPublication) { MavenPublication publication ->
-            publication.artifact(jar)
-            publication.artifact(sourcesJar)
-            publication.version("$project.version")
-            publication.artifactId("$project.mod_base_name")
+            from components.java
         }
     }
     repositories {
