--- a/gradle.properties
+++ b/gradle.properties
@@ -13,12 +13,12 @@ mod_credits=Some stuff inspired by JEI, Mekanism, Mantle
 mod_authors=TheMCBrothers
 mod_description=Library Mod for mods by TheMCBrothers.
 
-minecraft_version=1.20.2
-minecraft_version_range=[1.20.2, 1.21)
+minecraft_version=1.20.4
+minecraft_version_range=[1.20.4, 1.21)
 
-neo_version=20.2.86
-neo_version_range=[20.2,)
-loader_version_range=[1,)
+neo_version=20.4.60-beta
+neo_version_range=[20.4,)
+loader_version_range=[2,)
 
 github_repo=TheMCBrothers/TheMCBrosLib
 artifact_type=release
