--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -4,15 +4,15 @@ issueTrackerURL = "https://github.com/${github_repo}/issues"
 license = "${mod_license}"
 
 [[mods]]
-modId = "${mod_id}"
-version = "${mod_version}"
-displayName = "${mod_name}"
-updateJSONURL = "https://forge.curseupdate.com/${curse_project}/${mod_id}"
-displayURL = "https://themcbrothers.net/mods"
-logoFile = "logo.png"
-credits = "${mod_credits}"
-authors = "${mod_authors}"
-description = '''${mod_description}'''
+    modId = "${mod_id}"
+    version = "${mod_version}"
+    displayName = "${mod_name}"
+    updateJSONURL = "https://neoforge.curseupdate.com/${curse_project}/${mod_id}"
+    displayURL = "https://themcbrothers.net/mods"
+    logoFile = "logo.png"
+    credits = "${mod_credits}"
+    authors = "${mod_authors}"
+    description = '''${mod_description}'''
 
 [[dependencies.${mod_id}]]
     modId = "neoforge"
