--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -7,7 +7,7 @@ license = "${mod_license}"
     modId = "${mod_id}"
     version = "${mod_version}"
     displayName = "${mod_name}"
-    updateJSONURL = "https://forge.curseupdate.com/${curse_project}/${mod_id}"
+    updateJSONURL = "https://neoforge.curseupdate.com/${curse_project}/${mod_id}"
     displayURL = "https://themcbrothers.net/mods"
     logoFile = "logo.png"
     credits = "${mod_credits}"
