--- a/gradle.properties
+++ b/gradle.properties
@@ -20,6 +20,7 @@ neo_version=20.2.86
 neo_version_range=[20.2,)
 loader_version_range=[1,)
 
+maven_name=themcbroslib
 github_repo=TheMCBrothers/TheMCBrosLib
 artifact_type=release
 curse_project=387586
