--- a/gradle.properties
+++ b/gradle.properties
@@ -20,6 +20,7 @@ neo_version=20.4.73-beta
 neo_version_range=[20.4.70,)
 loader_version_range=[2,)
 
+maven_name=themcbroslib
 github_repo=TheMCBrothers/TheMCBrosLib
 artifact_type=release
 curse_project=387586
