--- a/gradle.properties
+++ b/gradle.properties
@@ -6,18 +6,18 @@ org.gradle.daemon=false
 mod_id=tmcb_lib
 mod_name=TheMCBrosLib
 mod_license=MIT License
-mod_version=6.1.0
+mod_version=7.0.0-SNAPSHOT
 mod_group_id=net.themcbrothers
 mod_base_name=TheMCBrosLib
 mod_credits=Some stuff inspired by JEI, Mekanism, Mantle
 mod_authors=TheMCBrothers
 mod_description=Library Mod for mods by TheMCBrothers.
 
-minecraft_version=1.20.4
-minecraft_version_range=[1.20.4, 1.21)
+minecraft_version=24w11a
+minecraft_version_range=24w11a
 
-neo_version=20.4.73-beta
-neo_version_range=[20.4.70,)
+neo_version=20.5.0-alpha.24w11a.20240318.171240
+neo_version_range=20.5.0-alpha.24w11a.20240318.171240
 loader_version_range=[2,)
 
 maven_name=themcbroslib
