--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java-library'
     id 'idea'
     id 'maven-publish'
-    id 'net.neoforged.gradle.userdev' version '7.0.100'
+    id 'net.neoforged.gradle.userdev' version '7.0.105'
     id 'me.shedaniel.unified-publishing' version '0.1.+'
 }
 
@@ -15,7 +15,7 @@ base {
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(17)
+        languageVersion = JavaLanguageVersion.of(21)
     }
 
     withSourcesJar()
@@ -53,6 +53,12 @@ sourceSets.main.resources { srcDir 'src/generated/resources' }
 repositories {
     mavenLocal()
     maven { url 'https://nexus.themcbrothers.net/repository/maven-mod-dependencies/' }
+    maven {
+        url 'https://prmaven.neoforged.net/NeoForge/pr787'
+        content {
+            includeModule('net.neoforged', 'neoforge')
+        }
+    }
 }
 
 dependencies {
