[1.20.5-pre1] Initial port

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,11 +13,11 @@ mod_credits=Some stuff inspired by JEI, Mekanism, Mantle
 mod_authors=TheMCBrothers
 mod_description=Library Mod for mods by TheMCBrothers.
 
-minecraft_version=24w14a
-minecraft_version_range=24w14a
+minecraft_version=1.20.5-pre1
+minecraft_version_range=1.20.5-pre1
 
-neo_version=20.5.0-alpha.24w14a.20240409.222101
-neo_version_range=20.5.0-alpha.24w14a.20240409.222101
+neo_version=20.5.0-alpha.1.20.5-pre1.20240412.185900
+neo_version_range=20.5.0-alpha.1.20.5-pre1.20240412.185900
 loader_version_range=[3,)
 
 maven_name=themcbroslib
