--- a/gradle.properties
+++ b/gradle.properties
@@ -13,11 +13,11 @@ mod_credits=Some stuff inspired by JEI, Mekanism, Mantle
 mod_authors=TheMCBrothers
 mod_description=Library Mod for mods by TheMCBrothers.
 
-minecraft_version=1.20.5-pre1
-minecraft_version_range=1.20.5-pre1
+minecraft_version=1.20.5-rc1
+minecraft_version_range=1.20.5-rc1
 
-neo_version=20.5.0-alpha.1.20.5-pre1.20240412.185900
-neo_version_range=20.5.0-alpha.1.20.5-pre1.20240412.185900
+neo_version=20.5.0-alpha.1.20.5-rc1.20240419.085959
+neo_version_range=20.5.0-alpha.1.20.5-rc1.20240419.085959
 loader_version_range=[3,)
 
 maven_name=themcbroslib
