--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,6 +12,8 @@ permissions:
 jobs:
   publish:
     uses: TheMCBrothers/.github/.github/workflows/mod_publish_unified.yml@main
+    with:
+      java_version: '21'
     secrets:
       CURSEFORGE_TOKEN: ${{ secrets.CURSEFORGE_TOKEN }}
       MODRINTH_TOKEN: ${{ secrets.MODRINTH_TOKEN }}
