--- a/.github/workflows/java_ci.yml
+++ b/.github/workflows/java_ci.yml
@@ -14,4 +14,6 @@ permissions:
 
 jobs:
   ci:
-    uses: TheMCBrothers/.github/.github/workflows/mod_ci.yml@neo
+    uses: TheMCBrothers/.github/.github/workflows/mod_ci.yml@main
+    with:
+      java_version: '21'
