--- a/gradle.properties
+++ b/gradle.properties
@@ -13,11 +13,11 @@ mod_credits=Some stuff inspired by JEI, Mekanism, Mantle
 mod_authors=TheMCBrothers
 mod_description=Library Mod for mods by TheMCBrothers.
 
-minecraft_version=1.20.5
-minecraft_version_range=[1.20.5, 1.21)
+minecraft_version=1.20.6
+minecraft_version_range=[1.20.6, 1.21)
 
-neo_version=20.5.3-beta
-neo_version_range=[20.5,)
+neo_version=20.6.11-beta
+neo_version_range=[20.6.10-beta,)
 loader_version_range=[3,)
 
 maven_name=themcbroslib
