--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ org.gradle.daemon=false
 mod_id=tmcb_lib
 mod_name=TheMCBrosLib
 mod_license=MIT License
-mod_version=7.0.0
+mod_version=7.0.1-SNAPSHOT
 mod_group_id=net.themcbrothers
 mod_base_name=TheMCBrosLib
 mod_credits=Some stuff inspired by JEI, Mekanism, Mantle
@@ -16,8 +16,8 @@ mod_description=Library Mod for mods by TheMCBrothers.
 minecraft_version=1.20.6
 minecraft_version_range=[1.20.6, 1.21)
 
-neo_version=20.6.48-beta
-neo_version_range=[20.6.43-beta,)
+neo_version=20.6.75-beta
+neo_version_range=[20.6.72-beta,)
 loader_version_range=[3,)
 
 maven_name=themcbroslib
