--- a/gradle.properties
+++ b/gradle.properties
@@ -16,8 +16,8 @@ mod_description=Library Mod for mods by TheMCBrothers.
 minecraft_version=1.20.6
 minecraft_version_range=[1.20.6, 1.21)
 
-neo_version=20.6.75-beta
-neo_version_range=[20.6.72-beta,)
+neo_version=20.6.116
+neo_version_range=[20.6.115,)
 loader_version_range=[3,)
 
 maven_name=themcbroslib
