--- a/gradle.properties
+++ b/gradle.properties
@@ -6,19 +6,19 @@ org.gradle.daemon=false
 mod_id=tmcb_lib
 mod_name=TheMCBrosLib
 mod_license=MIT License
-mod_version=7.0.1-SNAPSHOT
+mod_version=8.0.0-SNAPSHOT
 mod_group_id=net.themcbrothers
 mod_base_name=TheMCBrosLib
 mod_credits=Some stuff inspired by JEI, Mekanism, Mantle
 mod_authors=TheMCBrothers
 mod_description=Library Mod for mods by TheMCBrothers.
 
-minecraft_version=1.20.6
-minecraft_version_range=[1.20.6, 1.21)
+minecraft_version=1.21
+minecraft_version_range=[1.21, 1.22)
 
-neo_version=20.6.116
-neo_version_range=[20.6.115,)
-loader_version_range=[3,)
+neo_version=21.0.6-beta
+neo_version_range=[21.0,)
+loader_version_range=[4,)
 
 maven_name=themcbroslib
 github_repo=TheMCBrothers/TheMCBrosLib
