set version to 8.0.0

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ org.gradle.daemon=false
 mod_id=tmcb_lib
 mod_name=TheMCBrosLib
 mod_license=MIT License
-mod_version=8.0.0-SNAPSHOT
+mod_version=8.0.0
 mod_group_id=net.themcbrothers
 mod_base_name=TheMCBrosLib
 mod_credits=Some stuff inspired by JEI, Mekanism, Mantle
@@ -22,6 +22,6 @@ loader_version_range=[4,)
 
 maven_name=themcbroslib
 github_repo=TheMCBrothers/TheMCBrosLib
-artifact_type=beta
+artifact_type=release
 curse_project=387586
 modrinth_project=eIDsiLbx
