--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,8 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+org.gradle.debug=false
+org.gradle.configuration-cache=true
 
 mod_id=tmcb_lib
 mod_name=TheMCBrosLib
@@ -16,7 +18,10 @@ mod_description=Library Mod for mods by TheMCBrothers.
 minecraft_version=1.21
 minecraft_version_range=[1.21, 1.22)
 
-neo_version=21.0.14-beta
+neoForge.parchment.minecraftVersion=1.21
+neoForge.parchment.mappingsVersion=2024.07.07
+
+neo_version=21.0.76-beta
 neo_version_range=[21.0,)
 loader_version_range=[4,)
 
