--- a/gradle.properties
+++ b/gradle.properties
@@ -21,7 +21,7 @@ minecraft_version_range=[1.21, 1.22)
 neoForge.parchment.minecraftVersion=1.21
 neoForge.parchment.mappingsVersion=2024.07.07
 
-neo_version=21.0.76-beta
+neo_version=21.0.167
 neo_version_range=[21.0,)
 loader_version_range=[4,)
 
