we support two game versions

--- a/gradle.properties
+++ b/gradle.properties
@@ -25,6 +25,7 @@ neo_version=21.0.167
 neo_version_range=[21.0,)
 loader_version_range=[4,)
 
+supported_game_versions=1.21,1.21.1
 maven_name=themcbroslib
 github_repo=TheMCBrothers/TheMCBrosLib
 artifact_type=release
