--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java-library'
     id 'idea'
     id 'maven-publish'
-    id 'net.neoforged.moddev' version '1.0.0'
+    id 'net.neoforged.moddev' version '1.0.21'
     id 'me.shedaniel.unified-publishing' version '0.1.+'
 }
 
@@ -124,7 +124,7 @@ unifiedPublishing {
     project {
         displayName = "[$minecraft_version] v$mod_version"
         releaseType = project.artifact_type
-        gameVersions = [minecraft_version]
+        gameVersions.addAll supported_game_versions.split(", ?")
         gameLoaders = ["neoforge"]
 
         mainPublication tasks.jar
